--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,5 +5,6 @@
     "/js/admin/error.js": "/js/admin/error.js?id=886dcf7701965d16ab69",
     "/js/admin/component.js": "/js/admin/component.js?id=7c1df5ab535f318e62bd",
     "/js/admin/setting.js": "/js/admin/setting.js?id=bdc9cdc355685a922ada",
+    "/js/vpsdie.js": "/js/vpsdie.js?id=c52e7266431c184b7d2c",
     "/css/app.css": "/css/app.css?id=68b329da9893e34099c7"
 }
