--- a/composer.json
+++ b/composer.json
@@ -55,8 +55,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Plugins\\":"plugins/"
+            "App\\": "app/"
         },
         "files": [
             "app/helpers.php"
