--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "hyperf/logger": "~2.1.0",
         "hyperf/memory": "~2.1.0",
         "hyperf/model-cache": "~2.1.0",
+        "hyperf/paginator": "^2.1",
         "hyperf/process": "~2.1.0",
         "hyperf/redis": "~2.1.0",
         "hyperf/session": "^2.1",
