--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "hyperf/validation": "^2.1",
         "hyperf/view": "^2.1",
         "hyperf/view-engine": "^2.1",
-        "laravel/helpers": "^1.4"
+        "laravel/helpers": "^1.4",
+        "voku/anti-xss": "^4.1"
     },
     "require-dev": {
         "filp/whoops": "^2.13",
