--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,6 +5,7 @@
     "/js/admin/error.js": "/js/admin/error.js?id=886dcf7701965d16ab69",
     "/js/admin/component.js": "/js/admin/component.js?id=7c1df5ab535f318e62bd",
     "/js/admin/setting.js": "/js/admin/setting.js?id=bdc9cdc355685a922ada",
-    "/js/vpsdie.js": "/js/vpsdie.js?id=1f5888974f0451c44c04",
-    "/css/app.css": "/css/app.css?id=387c1aaff0d943f5e606"
+    "/js/vpsdie.js": "/js/vpsdie.js?id=3fcb0b75959e065d888c",
+    "/js/show.js": "/js/show.js?id=acee9c9d8a9d73c88941",
+    "/css/app.css": "/css/app.css?id=1a106a90ffbc7e309276"
 }
