--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,7 @@
     "/js/admin/component.js": "/js/admin/component.js?id=7c1df5ab535f318e62bd",
     "/js/admin/setting.js": "/js/admin/setting.js?id=bdc9cdc355685a922ada",
     "/js/vpsdie.js": "/js/vpsdie.js?id=3fcb0b75959e065d888c",
+    "/js/admin/vpsdie/setting.js": "/js/admin/vpsdie/setting.js?id=389731e7be5ba5273e15",
     "/js/show.js": "/js/show.js?id=acee9c9d8a9d73c88941",
     "/css/app.css": "/css/app.css?id=a3f3ed001032d88f4eab"
 }
