--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,7 +6,8 @@
     "/js/admin/component.js": "/js/admin/component.js?id=7c1df5ab535f318e62bd",
     "/js/admin/setting.js": "/js/admin/setting.js?id=bdc9cdc355685a922ada",
     "/js/vpsdie.js": "/js/vpsdie.js?id=3fcb0b75959e065d888c",
-    "/js/admin/vpsdie/setting.js": "/js/admin/vpsdie/setting.js?id=389731e7be5ba5273e15",
+    "/js/about.js": "/js/about.js?id=4c9066a69c1b1275e406",
+    "/js/admin/vpsdie/setting.js": "/js/admin/vpsdie/setting.js?id=714016260060afcaca8d",
     "/js/show.js": "/js/show.js?id=bee3ed60df6298191063",
     "/css/app.css": "/css/app.css?id=a3f3ed001032d88f4eab"
 }
